# life_gl

./: CMakeLists.txt  main.cpp
include/: mesh.h  renderer.h  scene.h
res/shaders/: basic.frag  basic.vert
src/: main.cpp  mesh.cpp  renderer.cpp  scene.cpp
